--- a/css/styles.css
+++ b/css/styles.css
@@ -9,5 +9,42 @@ body {
   background: url(../img/pizz.jpg);
   background-position: center center;
   background-size: cover;
+  color: white; /*
+    overflow-x: hidden  ;*/
+}
+.nav {
+    opacity: 0.5;
+  height: 100px;
+}
+
+.brand {
+  font-weight: 500 !important;
+  font-size: 45px;
+  color: black;
+}
+
+nav a {
+  font-weight: 500;
+}
+
+div nav a:hover {
+  text-decoration: none;
+}
+
+.btn-nav {
+  color: black;
+  border: 1px solid black;
+}
+
+.btn-nav:hover {
   color: white;
+  background-color: black;
+  border: 1px solid;
+  transition: all 1s ease-in-out;
+  transform: scale(0.97);
+  box-shadow: none;
+}
+
+.image-div {
+  z-index: 5;
 }
