--- a/css/styles.css
+++ b/css/styles.css
@@ -57,3 +57,35 @@ div nav a:hover {
   margin-top: 300px;
 
 }
+@media only screen and (max-width: 600px) {
+  .nav {
+    opacity: 0.5;
+  height: 100px;
+}
+
+.brand {
+  font-weight: 500 !important;
+  font-size: 45px;
+  color: black;
+}
+
+nav a {
+  font-weight: 500;
+}
+
+div nav a:hover {
+  text-decoration: none;
+}
+
+.btn-nav {
+  color: black;
+  border: 1px solid black;
+}
+}
+ 
+
+
+@media only screen and (min-width: 600px) {}
+
+
+@media only screen and (min-width: 768px) {}
